--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,21 +3,21 @@
     package="com.example.edulock">
 
     <application
-        android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@drawable/logo_splash"
-        android:label="@string/app_name"
+        android:fullBackupOnly="true"
         android:roundIcon="@drawable/indicator_inactive_background"
         android:supportsRtl="true"
         android:theme="@style/Theme.Edulock">
         <activity
+            android:name=".lockapp.LockApp"
+            android:exported="false" />
+        <activity
+            android:name=".firebaseauth.Login"
+            android:exported="false" />
+        <activity
             android:name=".firebaseauth.Register"
             android:exported="false" />
-        <activity
-            android:name=".firebaseauth.login"
-            android:exported="false" />
-        <activity
-            android:name=".HalamanUtama"
-            android:exported="true" />
         <activity
             android:name=".onboarding.MainActivity"
             android:exported="true" />
