--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,17 +3,32 @@
     package="com.example.edulock">
 
     <application
-        android:fullBackupContent="true"
+        android:allowBackup="true"
         android:icon="@drawable/logo_splash"
-        android:fullBackupOnly="true"
         android:roundIcon="@drawable/indicator_inactive_background"
         android:supportsRtl="true"
         android:theme="@style/Theme.Edulock">
+
+        <activity
+            android:name=".combine.Unlock"
+            android:exported="false" />
+        <activity
+            android:name=".combine.EditData"
+            android:exported="false" />
+        <activity
+            android:name=".combine.Soal"
+            android:exported="false" />
+        <activity
+            android:name=".combine.ChooseUser"
+            android:exported="false" />
         <activity
             android:name=".lockapp.LockApp"
             android:exported="false" />
         <activity
             android:name=".firebaseauth.Login"
+            android:exported="false" />
+        <activity
+            android:name=".firebaseauth.RegisterKid"
             android:exported="false" />
         <activity
             android:name=".firebaseauth.Register"
